--- a/style.css
+++ b/style.css
@@ -1,12 +1,21 @@
-body
-{
+html, body {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+
 	background-color: #000;
 }
 
 
-#contener1, #contener2, #contener3, #contener4
-{
+.container{
+	margin: auto;
+}
+
+
+#container1, #container2, #container3, #container4 {
 	display: flex;
+	justify-content: center;
 }
 
 
@@ -24,7 +33,7 @@ body
   background-color: #000;
   border: none;
   color: #FFF;
-  margin: 0px 5px 0px 5px;
+  border: 2px solid transparent;
   text-align: center;
   font-size: 3em;
 }
@@ -33,10 +42,63 @@ body
 	background-color: #122912;
 	border-radius: 2px;
 	border: 2px solid #4CAF50;
+	cursor: pointer;
 }
 .buttonCarrousel:disabled{
 	color: #222024;
 	border-radius: 2px;
 	border: 2px solid transparent;
 	background-color: #000;
+	cursor: not-allowed;
+}
+
+
+
+
+
+/* −−−−−−−−−−−−− TEST modal −−−−−−−−−−−−−−−−−−−−−−−−−−−−
+
+
+/* Décrire l'animation */
+@keyframes slideDownFadeIN {
+    from {top:-100px;opacity: 0;}
+    to {top:0px;opacity:1;}
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
