--- a/style.css
+++ b/style.css
@@ -10,20 +10,42 @@ html, body {
 #bestMovie{
 	margin: auto;
 
-
 	background-image: linear-gradient(to right, #541354, transparent);
 	justify-content: center;
 }
 
+/* −− CAROUSEL −−−−−−−−−−−−−−−−−−−−−−−−−−−−−−−−−−−−−−−−−−−−−−− */
 .container{
+	transform: scale(0.8);
+
 	margin: auto;
+}
+.headerCarousel{
+	justify-content: center;
+}
+.headerCarousel h1{
+	margin: 0px;
+	padding: 0px;
+	color: #FFF;
+
+	font-size: 1.5em;
+	text-align: center;
+}
+
+.sectionCarousel{
+	display: flex;
+	justify-content: center;
 }
 #container1, #container2, #container3, #container4 {
 	display: flex;
 	justify-content: center;
+	flex-direction: column;
+	margin-top: 5px;
 }
 
+
 .coverCarousel{
+	/*transform: scale(0.8);*/
 	border: 2px solid transparent;
 }
 .coverCarousel:hover {
@@ -47,16 +69,9 @@ html, body {
 	border: 2px solid #4CAF50;
 	cursor: pointer;
 }
-.buttonCarousel:disabled{
-	color: #222024;
-	border-radius: 2px;
-	border: 2px solid transparent;
-	background-color: #000;
-	cursor: not-allowed;
-}
 
 
-/* −−−−−−−−−−−−− DETAILS MODAL−−−−−−−−−−−−−−
+/* −− DETAILS MODAL −−−−−−−−−−−−−−−−−−−−−−−−−−−−−−−−−−−−−−−−−− */
 /* The Modal (background) */
 #detailContainer{
 	display: none; /* Hidden by default */
